<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_shape"
        android:orientation="vertical"
        android:padding="10dp" >

        <Spinner
            android:id="@+id/spEmpresa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="@string/labelEmpresa"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spCondutor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="@string/labelCondutor"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spVeiculo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="@string/labelVeiculo"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spCombustivel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:prompt="@string/labelCombustivel"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/odometro" />

                <EditText
                    android:id="@+id/edtOdometro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/labelOdometro"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/gas" />

                <EditText
                    android:id="@+id/edtQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/labelQuantidade"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/cifrao" />

                <EditText
                    android:id="@+id/edtValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/labelValor"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSalvar" />
    </LinearLayout>

</LinearLayout>